Updated the Licence

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="africons">
-        <h1 class="africons--title">All Africons Collection</h1>
+        <h1 class="africons__title">All Africons Collection</h1>
             <i class="africons__icon africons-mpesa"></i>
             <i class="africons__icon africons-airtel"></i>
     </div>
