Created the Page/style for displaying icons

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="africons">
-        <h1 class="africons__title">All Africons Collection</h1>
-            <i class="africons__icon africons-mpesa"></i>
-            <i class="africons__icon africons-airtel"></i>
+        <h1 class="title">Some of the Africons Collection</h1>
+            <i class="icon africons-mpesa"></i>
+            <i class="icon africons-airtel"></i>
     </div>
 </body>
 </html>
