Edited the Page/style for displaying all icons

--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="i/favicon.png" type="image/x-icon">
     <title>Africons Collection - </title>
-    <link rel="stylesheet" href="style.scss">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/africons.css">
 </head>
 <body>
-    <div class="africons">
-        <h1 class="title">Some of the Africons Collection</h1>
+    <div>
+        <h1 class="title">Africons Collection</h1>
+         </div>
+         <div class="africons">
+            <i class="icon africons-mpesa"></i>
+            <i class="icon africons-airtel"></i>
             <i class="icon africons-mpesa"></i>
             <i class="icon africons-airtel"></i>
     </div>
