Edited the Page/style for displaying all icons

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
             <i class="icon africons-airtel"></i>
             <i class="icon africons-mpesa"></i>
             <i class="icon africons-airtel"></i>
+            <i class="icon africons-mpesa"></i>
+            <i class="icon africons-airtel"></i>
+            <i class="icon africons-mpesa"></i>
+            <i class="icon africons-airtel"></i>
+            <i class="icon africons-airtel"></i>
+            <i class="icon africons-mpesa"></i>
+            <i class="icon africons-airtel"></i>
     </div>
 </body>
 </html>
