Added more african brands icons

--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
          <div class="africons">
             <i class="icon africons-mpesa"></i>
             <i class="icon africons-airtel"></i>
-            <i class="icon africons-mpesa"></i>
-            <i class="icon africons-airtel"></i>
-            <i class="icon africons-airtel"></i>
-            <i class="icon africons-mpesa"></i>
-            <i class="icon africons-airtel"></i>
-            <i class="icon africons-mpesa"></i>
-            <i class="icon africons-airtel"></i>
-            <i class="icon africons-mpesa"></i>
-            <i class="icon africons-airtel"></i>
-            <i class="icon africons-airtel"></i>
-            <i class="icon africons-mpesa"></i>
-            <i class="icon africons-airtel"></i>
+            <i class="icon africons-mtn"></i>
+            <i class="icon africons-amref"></i>
+            <i class="icon africons-ecobank"></i>
+            <i class="icon africons-afcon"></i>
+            <i class="icon africons-dangote"></i>
+            <i class="icon africons-tusker"></i>
+            <i class="icon africons-shoprite"></i>
+            <i class="icon africons-kenya-airways"></i>
+            <i class="icon africons-ethiopian-airline"></i>
+            <i class="icon africons-bidco"></i>
+            <i class="icon africons-azam"></i>
+            <i class="icon africons-kwese"></i>
     </div>
 </body>
 </html>
