Work in Progress

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="i/favicon.png" type="image/x-icon">
     <title>Africons Collection - </title>
     <link rel="stylesheet" href="style.css">
@@ -17,7 +16,7 @@
             <i class="icon africons-mpesa"></i>
             <i class="icon africons-airtel"></i>
             <i class="icon africons-mtn"></i>
-            <i class="icon africons-amref"></i>
+            <i class="icon africons-jumia"></i>
             <i class="icon africons-ecobank"></i>
             <i class="icon africons-afcon"></i>
             <i class="icon africons-dangote"></i>
