Added more Icons

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
          </div>
          <div class="africons">
             <i class="icon africons-mpesa"></i>
+            <i class="icon africons-star"></i>
             <i class="icon africons-airtel"></i>
             <i class="icon africons-mtn"></i>
             <i class="icon africons-jumia"></i>
